# popvcf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci_linux.yaml  clang-format.yaml
benchmark/: run_benchmark.sh
doc/: Doxyfile.in
include/: popvcf.hpp
src/: CMakeLists.txt  decode.cpp  decode.hpp  encode.cpp  encode.hpp  in.constants.hpp  io.hpp  main.cpp  sequence_utils.cpp  sequence_utils.hpp
test/: create_test_data.sh
